--- a/AulasDW/Site de receita/index.html
+++ b/AulasDW/Site de receita/index.html
@@ -3,18 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Receita</title>
-        <style>
-            .image-container{
-                margin:0 auto;
-                width: 30%;
-            }
-            .ingredientes{
-                font-size: 30px;
-            }
-            .preparo{
-                font-size: 30px;
-            }
-        </style>
+        
+        <link rel="stylesheet" href="/Site de receita/css/style.css">
     </head>
     <body>
         <h1 style="text-align: center;color: aquamarine;font-size: 60px;">Brownie proteico</H1>
@@ -51,5 +41,6 @@
 
         </div>
 
+     
     </body>
 </html>
