Aula do dia 20/03

--- a/AulasDW/Aula13-03-25/index.html
+++ b/AulasDW/Aula13-03-25/index.html
@@ -27,17 +27,23 @@
     <section class="cards">
         <div class="card">
             <h3>Card 1</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, dignissimos! Sint nemo velit suscipit, corrupti quas quaerat explicabo possimus fugit assumenda? Natus eos, iusto eligendi repellat alias necessitatibus vel deleniti?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, dignissimos! Sint nemo velit suscipit,
+                corrupti quas quaerat explicabo possimus fugit assumenda? Natus eos, iusto eligendi repellat alias
+                necessitatibus vel deleniti?</p>
         </div><!-- Fim do Card 1 -->
 
         <div class="card">
             <h3>Card 2</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, dignissimos! Sint nemo velit suscipit, corrupti quas quaerat explicabo possimus fugit assumenda? Natus eos, iusto eligendi repellat alias necessitatibus vel deleniti?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, dignissimos! Sint nemo velit suscipit,
+                corrupti quas quaerat explicabo possimus fugit assumenda? Natus eos, iusto eligendi repellat alias
+                necessitatibus vel deleniti?</p>
         </div><!-- Fim do Card 2 -->
 
         <div class="card">
             <h3>Card 3</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, dignissimos! Sint nemo velit suscipit, corrupti quas quaerat explicabo possimus fugit assumenda? Natus eos, iusto eligendi repellat alias necessitatibus vel deleniti?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, dignissimos! Sint nemo velit suscipit,
+                corrupti quas quaerat explicabo possimus fugit assumenda? Natus eos, iusto eligendi repellat alias
+                necessitatibus vel deleniti?</p>
         </div><!-- Fim do Card 3 -->
     </section>
 
@@ -46,7 +52,7 @@
     </footer>
 
 
-    
+
     <script src="js/script.js"></script>
     <script>
         function toggleDarkMode() {
