--- a/AulasDW/Aula20-03-25/index.html
+++ b/AulasDW/Aula20-03-25/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Aula do dia 20</title>
+    <title>Aula do dia 20 de março</title>
     <link rel="stylesheet" href="/Aula20-03-25/css/reset.css">
     <link rel="stylesheet" href="/Aula20-03-25/css/style.css">
 
