--- a/AulasDW/Aula27-03-25/index.html
+++ b/AulasDW/Aula27-03-25/index.html
@@ -60,15 +60,13 @@
 
             </tbody>
         </table>
-
-        <script src="/Aula27-03-25/js/script.js"></script>
-
+          <script src="/AulasDW/Aula27-03-25/js/script.js"></script>
     </div>
 
     <form action="#">
         <input type="number" name="num1" id="num1" placeholder="digite o primeiro numero">
         <input type="number" name="num2" id="num2" placeholder="digite o segundo numero">
-        <button type="button" id="Somar" class="btn operacoes">+</button>
+        <button type="button" id="somar" class="btn operacoes">+</button>
         <button type="button" id="sub" class="btn operacoes">-</button>
         <button type="button" id="div" class="btn operacoes">/</button>
         <button type="button" id="mult" class="btn operacoes">*</button>
@@ -76,7 +74,7 @@
 
     <h1 id="resultado2">Resultado: </h1>
 
-    <script src="Aula27-03-25/js/script.js"></script>
+    <script src="/AulasDW/Aula27-03-25/js/script.js"></script>
 </body>
 
 </html>
