--- a/AulasDW/exercicio-aula-20-03/calculadora.html
+++ b/AulasDW/exercicio-aula-20-03/calculadora.html
@@ -10,17 +10,17 @@
 <body>
     <h1>Calculadora</h1>
     <form class="calculadora" id="formCalculadora">
-        <input type="number" id="numero1" placeholder="Digite o primeiro número" required>
-        <input type="number" id="numero2" placeholder="Digite o segundo número" required>
-        <button type="button" id="soma">Soma [+]</button>
-        <button type="button" id="subtracao">Subtração [-]</button>
-        <button type="button" id="multiplicacao">Multiplicação [*]</button>
-        <button type="button" id="divisao">Divisão [/]</button>
+        <input type="number" id="num1" placeholder="Digite o primeiro número" required>
+        <input type="number" id="num2" placeholder="Digite o segundo número" required>
+        <button type="button" id="somar">Soma [+]</button>
+        <button type="button" id="sub">Subtração [-]</button>
+        <button type="button" id="mult">Multiplicação [*]</button>
+        <button type="button" id="div">Divisão [/]</button>
     </form>
 
-    <ul id="resultados"></ul>
+    <h3 id="resultado">Resultado: </h3>
 
-    <script src="/exercicio-aula-20-03/javascript/calculadora.js"></script>
+    <script src="/AulasDW/exercicio-aula-20-03/javascript/calculadora.js"></script>
 </body>
 
 </html>
