Att do site falta terminar o CSS

--- a/AulasDW/Aula10-04-25/filmes/Tron Legado/filme.html
+++ b/AulasDW/Aula10-04-25/filmes/Tron Legado/filme.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,17 @@
 </head>
 
 <body>
-    
+
     <h1>Tron Legado</h1>
     <img src="../../imgs/filmes/Tron capa.webp" alt="">
 
     <br>
 
+    <h3>Principal artista musical</h3>
+    <a href="../../musicas/daftpunk/daftpunk.html">
+        <p>Daft Punk</p>
+        <img src="../../imgs/musicas/daft.jfif" alt="Foto da banda daft punk">
+    </a>
 
     <nav>
         <ul>
@@ -22,9 +28,6 @@
         </ul>
     </nav>
 
-    <h3>Principal artista musical</h3>
-    <p>Daft Punk</p>
-    <img src="../../imgs/musicas/daft.jfif" alt="Foto da bnada daft punk">
-
 </body>
+
 </html>
