--- a/AulasDW/Aula10-04-25/filmes/index.html
+++ b/AulasDW/Aula10-04-25/filmes/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,31 +14,34 @@
 </head>
 
 <body>
-    
-       <h1>Filmes da Saga Tron</h1>
 
-       <h2>Trilogia Tron</h2>
-       <img style="width: 300px; max-height: 300px;" src="../imgs/filmes/tron capa.jfif" alt="">
+    <h1>Filmes da Saga Tron</h1>
 
-       <br> 
-       <nav>
-        <p><a href="../filmes/Tron Legado/filme.html">Tron Legado</a></p>
-        <img src="../imgs/filmes/Tron capa.webp" alt="Capa do filme tron legado">
-       </nav>
-       
-       <br>
+    <h2>Trilogia Tron</h2>
+    <img style="width: 300px; max-height: 300px;" src="../imgs/filmes/tron capa.jfif" alt="">
 
-       <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../musicas/index.html">Musicas</a></li>
-            </ul>
-       </nav>
+    <br>
 
-   
+    <nav>
+        <a href="../filmes/Tron Legado/filme.html">
+            <p>Tron Legado</p>
+            <img src="../imgs/filmes/Tron capa.webp" alt="Capa do filme tron legado">
+        </a>
+    </nav>
+
+    <br>
+
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../musicas/index.html">Musicas</a></li>
+        </ul>
+    </nav>
 
 
-       <script src="../js/script.js"></script>
+
+
+    <script src="../js/script.js"></script>
 
 </body>
 
