--- a/AulasDW/Aula10-04-25/index.html
+++ b/AulasDW/Aula10-04-25/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navegação</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
-    <h1>Navegação e estrutura de imagens</h1>
 
-    <nav>
+    <div class="container">
+        <h1 class="navegacao">Navegação e estrutura de imagens</h1>
 
-        <a href="filmes/">
-        <h2>Filmes da Saga Tron</h2>
-        <img style="max-width: 200px;" src="imgs/filmes/tron capa.jfif" alt="Capa da página de filmes">
-        </a>
+        <nav>
+            <div class="filme">
+                <a href="filmes/">
+                    <h2>Filmes da Saga Tron</h2>
+                    <img src="/imgs/filmes/tron capa.jfif" alt="Capa da página de filmes">
+                </a>
+            </div>
 
-        <a href="musicas/index.html">
-        <h2>Musicas do Artic Monkeys</h2>
-        <img style="max-width: 200px;" src="imgs/musicas/N1PartyAnthem.jpg" alt="Capa da página de musicas">
-        </a>
+            <div class="musica">
+                <a href="/musicas/index.html">
+                    <h2>Musicas</h2>
+                    <img src="imgs/musicas/N1PartyAnthem.jpg" alt="Capa da página de musicas">
+                </a>
+            </div>
 
-    </nav>
-    
+        </nav>
+    </div>
+
     <script src="js/script.js"></script>
 
 </body>
