--- a/AulasDW/Aula10-04-25/musicas/Articmonkeys/AM/am.html
+++ b/AulasDW/Aula10-04-25/musicas/Articmonkeys/AM/am.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Favourite worst nightmare</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <title>AM</title>
+    <link rel="stylesheet" href="../../../css/style.css">
 </head>
+
 <body>
-    
-    <h1>Capa do Albun</h1>
-    <img style="max-width: 300px;" src="../../imgs/musicas/505.jpg" alt="">
+
+    <h1>AM</h1>
+    <img style="max-width: 300px;" src="../../../imgs/musicas/N1PartyAnthem.jpg" alt="">
 
     <nav>
         <ul>
             <li><a href="../../">Home</a></li>
-            <li><a href="../index.html">Musicas</a></li>
+            <li><a href="../../index.html">Musicas</a></li>
         </ul>
     </nav>
 
@@ -23,4 +25,5 @@
     <script src="../../js/script.js"></script>
 
 </body>
+
 </html>
